<?xml version="1.0"?>
<package>
  <name>convertmsg_orktomoveit</name>
  <version>0.0.0</version>
  <description>Converter of ORKobject messages into MoveIt! messages</description>
  <author email="natalia.lyubova@gmail.com">Natalia Lyubova</author>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
